--- a/skeleton/backstage/catalog-info.yaml
+++ b/skeleton/backstage/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ cookiecutter.project_name }}
   description: {{ cookiecutter.description }}
   annotations:
-    github.com/project-slug: poplar0713/{{ cookiecutter.github_repo_name }}
+    github.com/project-slug: {{ cookiecutter.github_repo_owner }}/{{ cookiecutter.github_repo_name }}
     backstage.io/kubernetes-id: {{ cookiecutter.project_name }}
     argocd/proxy-url: '/argocd/api'
     argocd/app-name: {{ cookiecutter.argocd_app_name }}
