--- a/skeleton/techdocs.yaml
+++ b/skeleton/techdocs.yaml
@@ -1,3 +1,3 @@
 version: '1.0'
-title: {{ cookiecutter.project_name }} Documentation
-id: {{ cookiecutter.project_name }}
+title: {{ cookiecutter.project_name }} documentation
+id: {{ cookiecutter.project_name }}-doc
