--- a/skeleton/src/main/resources/application.yml
+++ b/skeleton/src/main/resources/application.yml
@@ -1,6 +1,34 @@
 spring:
   profiles:
     active: local
+  application:
+    name: {{ cookiecutter.project_name }}
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/your_database?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: your_username
+    password: your_password
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:conf/db/schema.sql
+      data-locations: classpath:conf/db/data.sql
+
+mybatis:
+  config-location: classpath:conf/mybatis/mybatis-config.xml
+  mapper-locations: classpath:conf/mybatis/mappers/{{ cookiecutter.package_name }}/**/*.xml
+  type-aliases-package: com.kt.{{ cookiecutter.package_name }}.sampleUser.model
+
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+
+logging:
+  level:
+    com.kt.{{ cookiecutter.package_name }}: DEBUG
+    org.springframework: INFO
+  config: classpath:logback-spring.xml
 
 ---
 spring:
@@ -19,13 +47,13 @@ spring:
 ---
 spring:
   config:
-    active:
+    activate:
       on-profile: stg
     import: application-stg.yml
 
 ---
 spring:
   config:
-    active:
+    activate:
       on-profile: prd
     import: application-prd.yml
