--- a/skeleton/Dockerfile
+++ b/skeleton/Dockerfile
@@ -1,15 +1,11 @@
-# Stage 1: Build the application using Maven
-FROM maven:3.8.4-openjdk-17 AS build
-WORKDIR /app
-COPY pom.xml .
-RUN mvn dependency:go-offline
-COPY src ./src
-RUN mvn clean package -DskipTests
+# Dockerfile
+FROM eclipse-temurin:17-jdk-alpine
 
-# Stage 2: Run the application using OpenJDK
-#FROM openjdk:17-jdk-slim
-FROM openjdk:17-jdk
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+COPY build/libs/*.jar app.jar
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
