--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 
     // MyBatis
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
