--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -23,10 +23,8 @@ repositories {
 }
 
 ext {
-    set('mybatisVersion', '3.0.3')
     set('mapstructVersion', '1.5.5.Final')
     set('querydslVersion', '5.0.0')
-    set('awsSdkVersion', '2.26.3')
     set('azureSdkVersion', '5.14.0')
 }
 
@@ -36,9 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-
-    // MyBatis
-    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisVersion}"
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8")
 
     // Database
     runtimeOnly 'org.postgresql:postgresql'
@@ -51,9 +47,6 @@ dependencies {
 
     // QueryDSL
     implementation "com.querydsl:querydsl-core:${querydslVersion}"
-
-    // AWS SDK
-    implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
 
     // Azure SDK
     implementation platform("com.azure.spring:spring-cloud-azure-dependencies:${azureSdkVersion}")
